--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,7 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/world_x
+spring.datasource.url=jdbc:mysql://localhost:3306/cities
 spring.datasource.username=root
 spring.datasource.password=12345
+spring.jpa.hibernate.ddl-auto=create
+
+#hibernate.hbm2ddl.auto= create
+
